# ci-cd-pipeline-automation-python

./: .gitignore  README.md  calculator.py  pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  test_calculator.py
.github/workflows/: ci-cd.yml
scripts/: generate_changelog.py
